OutfitkartApp/src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delevered_On__c</fullName>
        <label>Delevered On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Is_Delivered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Delivered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Kart__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Kart</label>
        <referenceTo>Kart__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Book__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Book</label>
        <referenceTo>Order_Book__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Outfit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outfit</label>
        <referenceTo>Outfit__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Preview__c</fullName>
        <label>Preview</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Stock__c</fullName>
        <label>Stock</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
</CustomObject>